k8s/app-deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: app
  labels:
    app: nodeapp
    component: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeapp
      component: app
  template:
    metadata:
      name: app-pod
      labels:
        app: nodeapp
        component: app
    spec:
      containers:
      - image: anisk/nodeapp
        name: nodeapp
