k8s/busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: monitoring
spec:
  containers:
  - name: busybox
    image: busybox:1.28
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
