k8s/mongo-deploy.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: nodeapp
    component: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
      component: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: nodeapp
        component: mongo
    spec:
      spec:
      containers:
      - image: mongo:3.2
        name: mongo
        volumeMounts:
        - name: db-pv
          mountPath: /data/db
      volumes:
      - name: db-pv
        persistentVolumeClaim:
          claimName: mongo-pvc
