k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: nodeapp
    component: app
spec:
  type: NodePort
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nodeapp
    component: app
