k8s/mongo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: nodeapp
    component: mongo
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: nodeapp
    component: mongo
