k8s/post-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: post-db
  labels:
    app: nodeapp
    component: mongo
    post-db: "true"
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
selector:
  app: nodeapp
  component: mongo
  post-db: "true"
