k8s/app-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 8081
